style(messagelist): fixed cropped off ol

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -145,16 +145,18 @@
 }
 ol {
   list-style-type: decimal;
+  padding-left: 2em;
 }
 
 ol li {
-  margin-left: 1.2em;
+  margin-left: 0em;
 }
 
 ul {
   list-style-type: disc;
+  padding-left: 2em;
 }
 
 ul li {
-  margin-left: 1.2em;
+  margin-left: 0em;
 }
